# jetson-tensorrt-onnx-research

./: .gitignore  README.md  config.py  generate.py  main.py  models.py  parsers.py  pyproject.toml  utils.py
code/week_4/: build_fp16.sh  dummy_input.py
code/week_5/sunday/native/: speech.py
code/week_5/sunday/native+rag/: jetson_rag.py
code/week_5/sunday/rag/tests/results/: OLLAMA.txt
onnx/: cypriotbert.py  onnx_init.ipynb
quantization_bench/code/: test.py  working.py
quantization_bench/result/: README.md
week_1/: benchmark_fp16.txt  benchmark_fp32.txt  benchmark_int8.txt  model.txt
week_2/: torch_onnx_model_export.ipynb
week_2/colab_code/: models_comparison.ipynb
week_5/native/results/: NATIVE.txt  native_results.md
week_5/native/tests/: ollama_native_results_llm.ipynb
week_5/rag/data/: data.txt
week_5/rag/tests/: simple_llama_index_rag_test(huggingfacellm_FAILS).ipynb  simple_llama_index_rag_test(ollama_WORKS).ipynb
week_5/rag/tests/results/: OLLAMA_SMOLLM.txt  RAG_test_results.md
