[project]
name = "stuff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "colored>=2.3.1",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "llama-index>=0.14.10",
    "numpy==1.26.4",
    "ollama>=0.6.1",
    "polygraphy>=0.49.26",
    "transformers>=4.57.1",
]
